# ngmt-transport

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  cbindgen.toml
.cursor/rules/: documentation.mdc
.github/workflows/: ci.yml
branding/: README.md
include/: ngmt_transport.h
src/: app_api.rs  discover.rs  ffi.rs  lib.rs  log_forward.rs
src/engine/: datagram_queue.rs  mod.rs  session.rs
tests/: loopback_connect.rs
