[package]
name = "ngmt-transport"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "First-party QUIC/WAN transport layer for NextGenMediaTransport"
license = "MIT"
repository = "https://github.com/NextGenMediaTransport/ngmt-transport"
readme = "README.md"

[dependencies]
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "net"] }
# rustls-ring (via `rustls`) for cross-platform TLS without system OpenSSL; runtime-tokio for async I/O.
quinn = { version = "0.11", features = ["runtime-tokio", "rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
cbindgen = "0.26"

[lib]
crate-type = ["cdylib", "rlib"]
